# StringNet_Herding

./: .gitignore  AllParameters  AllParameters.cpp  AllParameters.hpp  AllParametersExperiment.cpp  AllParametersExperiment.hpp  AllParametersExperiments  CMakeLists.txt  DBSCAN.cpp  FindGUROBI.cmake  assignDefenders2ClustersMIQCP.cpp  config_example.cpp  config_test.cpp  controlAttacker4.cpp  controlDefender5.cpp  controlDefenderFormation.cpp  controlDefenderFormation4.cpp  controlFiniteTimeTrajTracking.cpp  defDesiredClosedForm.cpp  defDesiredOpenForm.cpp  defGoalAssignMIQP.cpp  defInitDesirePos.cpp  example.cfg  example4.cpp  findCommGraphAndFormDist.cpp  findCommGraphAndFormDist.hpp  findCoordOnPath.cpp  findPathSpeeds.cpp  findPosOnPath.cpp  findShortestPath.cpp  findTimeOnPath.cpp  guided_mode.cpp  helperFunction.cpp  hover.cpp  ifopt_test.cpp  inhull.cpp  interSecLineLine.cpp  invalid.cfg  lambdaInterSecCircLine.cpp  leadTimeToAvoidCollision.cpp  (+20 more)
AttackerStep328/: XA.txt  XD.txt  sigma_p.txt
LineV/: L1.txt  L2.txt  cL1.txt  cL2.txt  drx.txt  drx2.txt  dry.txt  dry2.txt  dtheta.txt  mL1.txt  mL2.txt  r1.txt  r2.txt  r21.txt  r22.txt  theta1.txt  theta2.txt
config/: origin_config.cfg
dbs/: XA.txt  XA_submat.csv
defV/: Pbar.txt  optT.txt
motionPlan/: XD.txt  XD_des.txt
